mywork/force-app/main/default/objects/Snapshot_Field_Mapping__c/Snapshot_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Snapshot Field Mapping</label>
    <nameField>
        <displayFormat>SNAPMAP-{0000}</displayFormat>
        <label>Snapshot Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>