mywork/force-app/main/default/objects/Snapshot_Field_Mapping__c/fields/ALM_Job__c.field-meta.xml
<CustomField>
    <fullName>ALM_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALM Job</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ALM_Job__c.Tool__c</field>
            <operation>equals</operation>
            <value>Snapshot</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ALM_Job__c</referenceTo>
    <relationshipLabel>Snapshot Field Mappings</relationshipLabel>
    <relationshipName>Snapshot_Field_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>