mywork/force-app/main/default/objects/Snapshot_Field_Mapping__c/fields/Report_Column__c.field-meta.xml
<CustomField>
    <fullName>Report_Column__c</fullName>
    <description>The api name of the field in the source report.</description>
    <label>Report Column</label>
    <length>100</length>
    <type>Text</type>
</CustomField>