mywork/force-app/main/default/objects/Snapshot_Field_Mapping__c/fields/Target_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Api_Name__c</fullName>
    <description>The target field or fields in which the matching source field data should be stored, when using multiple targets, please separate via commas.</description>
    <label>Target Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>